# deep-learning

./: .clang-format  .gitignore  CMakeLists.txt  INSTALL-NUX.md  INSTALL-WIN.md  LICENSE  README.md  TODO.md  deep-learning-nux.sln  deep-learning-win.sln  project.props
cmake/: clang_or_gnu.cmake  msvc.cmake  nux.cmake  version.cmake  win.cmake
deep-learning-lib/: deep-learning-lib-win.vcxproj  deep-learning-lib-win.vcxproj.filters
lib/: CMakeLists.txt  deep-learning-nux.vcxproj  deep-learning-win.vcxproj  deep-learning-win.vcxproj.filters  framework.hpp  pch.cpp  pch.hpp  resource.hpp  version.hpp
lib/cmake/: all_files.cmake  build.Debug.cmake  build.Release.cmake  clang_or_gnu.cmake  deep-learning-config.cmake.in  increment_build_rev_ver.cmake  install.cmake  msvc.cmake  target_flags_wrt_compiler.cmake
lib/deep-learning/: session.cpp  session.hpp
lib/deep-learning/data/: dataset.hpp  dtypes.hpp  shape.cpp  shape.hpp  string.cpp  string.hpp  time.hpp
lib/deep-learning/data/dataset/: dataset.cpp  mnist.cpp  mnist.hpp
lib/deep-learning/data/enum/: dialogbox.hpp  env.hpp  hierarchy.hpp  loglevel.hpp
lib/deep-learning/data/time/: time.cpp  time_nux.cpp  time_win.cpp
lib/deep-learning/device/system/: info.hpp  shutdown_block.hpp
lib/deep-learning/device/system/info/: info.cpp  info_nux.cpp  info_win.cpp
lib/deep-learning/device/system/shutdown_block/: shutdown_block_nux.cpp  shutdown_block_nux.hpp  shutdown_block_win.cpp  shutdown_block_win.hpp
lib/deep-learning/drivers/: driver.cpp  driver.hpp
lib/deep-learning/io/: file.hpp  flags.hpp  logger.cpp  logger.hpp
lib/deep-learning/io/file/: file.cpp  file_nux.cpp  file_win.cpp
lib/deep-learning/io/form/: dialogbox.cpp  dialogbox.hpp  dialogbox_nux.cpp  dialogbox_win.cpp
lib/deep-learning/io/term/: command.hpp  command_nux.cpp  command_win.cpp  flags.cpp  input.cpp  input.hpp  keyboard.hpp  keyboard_nux.cpp  keyboard_nux.hpp  keyboard_win.cpp  keyboard_win.hpp  spinner.cpp  spinner.hpp
lib/deep-learning/nn/: checkpoint.cpp  checkpoint.hpp  checkpointer.cpp  checkpointer.hpp  learner.cpp  learner.hpp  var.cpp  var.hpp
lib/deep-learning/ops/: _math.hpp  math.cpp  math.hpp  modwt.cpp  modwt.hpp
lib/deep-learning/ops/distributions/: bernoulli.cpp  bernoulli.hpp  distribution.cpp  distribution.hpp  gaussian.cpp  gaussian.hpp  integer.cpp  integer.hpp  real.cpp  real.hpp
lib/deep-learning/v1/data/: dataset.cuh  datasets.cuh  datasets.hpp  dims.cu  dims.cuh  scaler.cpp  scaler.hpp  shared_memory.cuh
lib/deep-learning/v1/data/dataset/: cross_val.cpp  cross_val_opt.cpp  dataset.cu  dataset_v1.cpp  datasets.cpp  datasets.cu  minibatch.cpp
lib/deep-learning/v1/data/enum/: activation.hpp  dataset.hpp  group.hpp  hierarchy.hpp  hyperopt.hpp  initializer.hpp  layer.hpp  layer_activation.hpp  layer_dropout.hpp  layer_norm.hpp  loss_fn.hpp  model.hpp  optimizer.hpp  propagation.hpp  while.hpp
lib/deep-learning/v1/device/gpu/cuda/: framework.cu  framework.cuh  info.cu  info.cuh  prop.cu  prop.cuh
lib/deep-learning/v1/learner/: allocate.cpp  allocate.cu  assign_inputs.cpp  assign_inputs.cu  batch_normalization.cpp  batch_renormalization.cpp  bernoulli_mp.cpp  bernoulli_st.cpp  bwp.cu  bwp_fc_to_fc.cu  bwp_fc_to_fc_batch_renorm.cu  bwp_fc_to_fc_batch_renorm_dropout.cu  bwp_fc_to_fc_dropout.cu  bwp_mp.cpp  bwp_rec_mp.cpp  bwp_rec_st.cpp  bwp_st.cpp  compile.cpp  compute_error.cpp  compute_error.cu  compute_error_bce.cu  compute_error_bit_fail.cu  compute_error_mp.cpp  compute_error_st.cpp  compute_error_standard.cu  compute_grad.cpp  compute_loss.cpp  compute_loss.cu  compute_loss_bce.cu  compute_loss_bit_fail.cu  compute_loss_mp.cpp  compute_loss_st.cpp  compute_loss_standard.cu  compute_r.cpp  compute_r_mp.cpp  compute_r_st.cpp  connections_init.cpp  connections_prepare.cpp  copy.cpp  copy.cu  (+50 more)
lib/deep-learning/v1/mem/: copy.cu  reallocate.cpp  reallocate.cu  reallocate.cuh  reallocate.hpp  reallocate_c.cpp  reallocate_c.cu  reallocate_c.cuh  reallocate_c.hpp
lib/deep-learning/v1/ops/: accumulate.cu  accumulate.cuh  fill.cu  index.cu  mask.cu  mask.cuh  math.cuh  multiply.cu  multiply.cuh  reduce.cu  reduce.cuh  transpose.cu  transpose.cuh  while.hpp  zero.cu
lib/deep-learning/v1/ops/activations/: functions.cuh  functions.hpp
lib/deep-learning/v1/ops/constraints/: clip_gradient.cpp  constraint.cpp  euclidean.cpp  max_norm.cpp  max_norm.cu
lib/deep-learning/v1/ops/distributions/: curand.cu  curand.cuh  shuffle.cu  shuffle.cuh
lib/deep-learning/v1/ops/initializers/: glorot.cpp  identity.cpp  lsuv.cpp  orthogonal.cpp  uniform.cpp
lib/deep-learning/v1/ops/regularizers/: l1.cpp  l1.cu  l2.cpp  l2.cu  srip.cpp  weight_decay.cpp
lib/deep-learning/v1/optimizers/: adabound.cpp  adam.cpp  adam.cu  amsbound.cpp  amsgrad.cpp  amsgrad.cu  gaussian_search.cpp  gradient_descent.cpp  gradient_descent.cu  gradient_descent_momentum.cpp  gradient_descent_momentum.cu  grid_search.cpp  grid_search.hpp  hyperop.cpp  irprop_minus.cpp  irprop_plus.cpp  irprop_plus.cu  nesterov_accelerated_gradient.cpp  nesterov_accelerated_gradient.cu  nosadam.cpp  quickprop.cpp  quickprop.hpp  sarprop.cpp  sarprop.hpp
run/: CMakeLists.txt  deep-learning-run-nux.vcxproj  deep-learning-run-nux.vcxproj.filters  deep-learning-run-win.rc  deep-learning-run-win.vcxproj  deep-learning-run-win.vcxproj.filters  main.cpp  pch.cpp  pch.hpp  version.hpp
run/cmake/: all_files.cmake  build.Debug.cmake  clang_or_gnu.cmake  increment_build_rev_ver.cmake  msvc.cmake
run/deep-learning/: mnist.cpp  mnist.hpp
run/deep-learning/v1/: custom.cpp  custom.hpp  fx_simulator.cpp  grid_search_opt.cpp  optimize.cpp  pre_training.cpp  sae_lstm.cpp  transfer_learning.cpp
test/: CMakeLists.txt  deep-learning-test-win.rc  deep-learning-test-win.vcxproj  deep-learning-test-win.vcxproj.filters  pch.cpp  pch.hpp  version.hpp
test/cmake/: all_files.cmake  build.Release.cmake  clang_or_gnu.cmake  fetch_gtest.cmake  increment_build_rev_ver.cmake  msvc.cmake
test/deep-learning/: adept_simple_test.cpp  array_grad_adept_test.cpp  array_grad_test.cpp
(+291 files in other folders)
